--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#root{
+    width: 100svw;
+}
+
 .container{
     background-color: lightgray;
     border: 3px solid darkgray;
@@ -103,7 +107,7 @@ li span{
     text-overflow: ellipsis;
     overflow: hidden;
     padding: .4em;
-    color: rgb(27, 27, 27);
+    color: black;
 }
 
 .buttons{
@@ -146,4 +150,15 @@ li span{
 
 .delete-all-button:hover{
     background-color: gray;
+}
+
+@media screen and (width < 500px) {
+    body{
+        padding: 0;
+    }
+
+    .container{
+        padding: .8em;
+        border-radius: 0;
+    }
 }
